# sound-classifier

./: .gitignore  Dockerfile  Dockerfile_poetry  Makefile  READEME.md  README.md  TODO.md  app.py  model_training.ipynb  model_training.py  project-dependencies.yml  pyproject.toml  requirements.txt  sound-data-exploration.ipynb  tensorflow-check.ipynb  tflite_model.ipynb
data/: bc_utils.py  utils2.py
model/: model.h5  sound-model.tflite
src/: app.py  lite_model.py  model.py
