[tool.poetry]
name = "sound-classifier"
version = "0.1.0"
description = ""
authors = ["Camilo Ramirez <camilo.ramirez@onlyfy.com>"]
readme = "README.md"
packages = [{include = "sound_classifier"}]

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.10.1"
pandas = "^2.1.4"
streamlit = "^1.29.0"


[tool.poetry.group.dev.dependencies]
keras-image-helper = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
